# RayTracer

./: .gitignore  CMakeLists.txt  color.h  hittable.h  main.cpp  vec3.h
config_examples/: cam_example.tcam  config.trt  scene_example.tsc
src/: main.cpp  rtweekend.h
src/api/: cli.h  cli_config.h  config.h
src/driver/: base_renderer.h  multithreading.h  performance.h  renderer.h
src/hittables/: hittable.h  hittable_list.h  sphere.h
src/models/: color.h  interval.h  material.h  ray.h  tile.h  vec3.h
src/reader/: reader.h
src/utils/: camera.h
